2008-08-16  Sergey Poznyakoff  <gray@gnu.org.ua>

	Bugfixes.
	* imap4d/fetch.c (parse_fetch_body): Bugfix, allow another tokens
	after BODY.
	* imap4d/util.c (util_msgset): Make sure returned number of
	elements in set is always correct.
	* mailbox/folder.c (is_known_folder): Compare paths as well.  It
	was commented out on 2001-04-10 (7 years ago!!!) for unknown
	reasons.
	* mailbox/url.c (DECL_CMP): Bugfix. The macro effectively created
	a scheme comparator, no matter what its second argument was.

2008-08-14  Sergey Poznyakoff  <gray@gnu.org.ua>

	New functions.
	* include/mailutils/list.h (mu_list_get_comparator)
	(mu_list_intersect_dup, mu_list_intersect): New prototypes.
	* mailbox/list.c (mu_list_get_comparator)
	(mu_list_intersect_dup, mu_list_intersect): New functions.

	Fix GSASL in imap4d.
	* auth/gsasl.c (_gsasl_readline): Prevent stucking in
	blocking streams.
	* imap4d/auth_gsasl.c: Remove deprecated functions and data types.
	* imap4d/auth_gss.c (auth_gssapi): Fix signature.
	* imap4d/copy.c (imap4d_copy0): Fix return value.
	* imap4d/imap4d.c (imap4d_cfg_param): Fix type of login-disabled.
	* include/mailutils/gsasl.h (struct mu_gsasl_module_data): New
	members: service, realm, hostname, anon_user.
	* libcfg/gsasl.c (mu_gsasl_param): New keywords: service,
	realm, hostname, anonymous-user.

2008-08-13  Sergey Poznyakoff  <gray@gnu.org.ua>

	* imap4d/util.c (imap4d_readline): Fix loop break condition.
	* imap4d/testsuite/lib/imap4d.exp: Send newline after a literal.

	Bugfixes.
	* imap4d/copy.c, imap4d/fetch.c, imap4d/store.c: Do not report
	error on non-existing message sets (RFC 3501, section 6.4.8).
	* imap4d/testsuite/imap4d/IDEF0955.exp: Reflect this behavior.
	* imap4d/testsuite/imap4d/fetch.exp: Header names in replies 
	to BODY[HEADER.FIELDS...] are no longer quoted.

2008-08-11  Sergey Poznyakoff  <gray@gnu.org.ua>

	More bugfixes in imap4d.
	* imap4d/authenticate.c (_auth_try): Fix call to p->handler.